#!/usr/bin/env python3
# -*- coding: utf-8 -*-
"""
AI è¿ç§»æ“ä½œåŠ©æ‰‹
ä¸ºAIæä¾›å‹å¥½çš„æ¥å£ï¼Œç”¨äºç®¡ç†è¿ç§»å·¥ä½œã€æŸ¥è¯¢å·¥ä½œã€è®°å½•å·¥ä½œ
"""

import sys
sys.path.insert(0, '/home/pix/dev/code/java/DnfGameServer/devdoc/protobuf/reports/scripts')

from core.migration_tracker import MigrationTracker, Batch, MigrationFile, Issue, MigrationStatus, IssueStatus
from pathlib import Path
from typing import List, Dict, Optional, Tuple
import json


class AIMigrationAssistant:
    """AI è¿ç§»æ“ä½œåŠ©æ‰‹"""
    
    def __init__(self):
        self.tracker = MigrationTracker()
        self.project_root = Path('/home/pix/dev/code/java/DnfGameServer')
    
    # ========== å¿«é€ŸæŸ¥è¯¢æ¥å£ ==========
    
    def get_next_batch_to_migrate(self) -> Optional[Dict]:
        """è·å–ä¸‹ä¸€ä¸ªå¾…è¿ç§»çš„æ‰¹æ¬¡"""
        batches = self.tracker.list_batches(status='pending', order_by='priority DESC, batch_number')
        if batches:
            batch = batches[0]
            return {
                'batch_name': batch.batch_name,
                'batch_number': batch.batch_number,
                'description': batch.description,
                'priority': batch.priority,
                'total_files': batch.total_files
            }
        return None
    
    def get_batch_files(self, batch_name: str) -> List[Dict]:
        """è·å–æ‰¹æ¬¡çš„æ‰€æœ‰æ–‡ä»¶"""
        batch = self.tracker.get_batch_by_name(batch_name)
        if not batch:
            return []
        
        files = self.tracker.list_files(batch_id=batch.id)
        return [
            {
                'file_name': f.file_name,
                'module_name': f.module_name,
                'status': f.status,
                'proto_file': f.proto_file,
                'java_file': f.java_file,
                'has_test': f.has_test,
                'test_passed': f.test_passed
            }
            for f in files
        ]
    
    def get_file_info(self, file_name: str) -> Optional[Dict]:
        """è·å–æ–‡ä»¶è¯¦ç»†ä¿¡æ¯"""
        files = self.tracker.list_files()
        for f in files:
            if f.file_name == file_name:
                batch = self.tracker.get_batch(f.batch_id)
                return {
                    'file_name': f.file_name,
                    'module_name': f.module_name,
                    'batch_name': batch.batch_name if batch else None,
                    'status': f.status,
                    'proto_file': f.proto_file,
                    'java_file': f.java_file,
                    'has_test': f.has_test,
                    'test_passed': f.test_passed,
                    'issues_count': f.issues_count
                }
        return None
    
    def search_files_by_module(self, module_name: str) -> List[Dict]:
        """æŒ‰æ¨¡å—æœç´¢æ–‡ä»¶"""
        files = self.tracker.list_files(module_name=module_name)
        return [
            {
                'file_name': f.file_name,
                'status': f.status,
                'has_test': f.has_test,
                'test_passed': f.test_passed
            }
            for f in files
        ]
    
    def get_open_issues(self, batch_name: Optional[str] = None) -> List[Dict]:
        """è·å–æ‰€æœ‰å¾…è§£å†³çš„é—®é¢˜"""
        if batch_name:
            batch = self.tracker.get_batch_by_name(batch_name)
            if not batch:
                return []
            issues = self.tracker.list_issues(batch_id=batch.id, status='open')
        else:
            issues = self.tracker.list_issues(status='open')
        
        return [
            {
                'id': i.id,
                'title': i.title,
                'description': i.description,
                'severity': i.severity,
                'created_at': i.created_at
            }
            for i in issues
        ]
    
    # ========== å¿«é€Ÿæ›´æ–°æ¥å£ ==========
    
    def start_batch_migration(self, batch_name: str) -> bool:
        """å¼€å§‹è¿ç§»æ‰¹æ¬¡"""
        batch = self.tracker.get_batch_by_name(batch_name)
        if not batch:
            return False
        
        from datetime import datetime
        return self.tracker.update_batch(
            batch.id,
            status=MigrationStatus.IN_PROGRESS.value,
            start_date=datetime.now().strftime('%Y-%m-%d')
        )
    
    def complete_batch_migration(self, batch_name: str) -> bool:
        """å®Œæˆæ‰¹æ¬¡è¿ç§»"""
        batch = self.tracker.get_batch_by_name(batch_name)
        if not batch:
            return False
        
        from datetime import datetime
        return self.tracker.update_batch(
            batch.id,
            status=MigrationStatus.COMPLETED.value,
            actual_end_date=datetime.now().strftime('%Y-%m-%d')
        )
    
    def update_file_status(self, file_name: str, status: str, 
                          proto_file: Optional[str] = None,
                          java_file: Optional[str] = None,
                          has_test: bool = False,
                          test_passed: bool = False) -> bool:
        """æ›´æ–°æ–‡ä»¶çŠ¶æ€"""
        files = self.tracker.list_files()
        for f in files:
            if f.file_name == file_name:
                update_data = {'status': status}
                if proto_file:
                    update_data['proto_file'] = proto_file
                if java_file:
                    update_data['java_file'] = java_file
                update_data['has_test'] = has_test
                update_data['test_passed'] = test_passed
                
                if status == MigrationStatus.COMPLETED.value:
                    from datetime import datetime
                    update_data['completion_date'] = datetime.now().strftime('%Y-%m-%d')
                
                return self.tracker.update_file(f.id, **update_data)
        return False
    
    def add_issue(self, title: str, description: str, 
                  batch_name: Optional[str] = None,
                  file_name: Optional[str] = None,
                  severity: str = 'medium') -> int:
        """æ·»åŠ é—®é¢˜"""
        batch_id = None
        file_id = None
        
        if batch_name:
            batch = self.tracker.get_batch_by_name(batch_name)
            if batch:
                batch_id = batch.id
        
        if file_name:
            files = self.tracker.list_files()
            for f in files:
                if f.file_name == file_name:
                    file_id = f.id
                    break
        
        issue = Issue(
            id=None,
            batch_id=batch_id,
            file_id=file_id,
            title=title,
            description=description,
            solution=None,
            status=IssueStatus.OPEN.value,
            severity=severity,
            tags=None,
            created_at=None,
            resolved_at=None
        )
        
        return self.tracker.create_issue(issue)
    
    def resolve_issue(self, issue_id: int, solution: Optional[str] = None) -> bool:
        """è§£å†³é—®é¢˜"""
        update_data = {'status': IssueStatus.RESOLVED.value}
        if solution:
            update_data['solution'] = solution
        return self.tracker.update_issue(issue_id, **update_data)
    
    # ========== æ–‡ä»¶æ‰«ææ¥å£ ==========
    
    def scan_proto_files(self) -> List[Dict]:
        """æ‰«ææ‰€æœ‰ proto æ–‡ä»¶"""
        proto_dir = self.project_root / 'proto'
        proto_files = list(proto_dir.rglob('*.proto'))
        
        results = []
        for proto_file in proto_files:
            results.append({
                'path': str(proto_file.relative_to(self.project_root)),
                'name': proto_file.stem,
                'size': proto_file.stat().st_size
            })
        
        return sorted(results, key=lambda x: x['path'])
    
    def scan_java_files(self) -> List[Dict]:
        """æ‰«ææ‰€æœ‰ Java æ–‡ä»¶"""
        java_dir = self.project_root / 'src' / 'main' / 'java'
        java_files = list(java_dir.rglob('*.java'))
        
        results = []
        for java_file in java_files:
            results.append({
                'path': str(java_file.relative_to(self.project_root)),
                'name': java_file.stem,
                'size': java_file.stat().st_size
            })
        
        return sorted(results, key=lambda x: x['path'])
    
    def scan_test_files(self) -> List[Dict]:
        """æ‰«ææ‰€æœ‰æµ‹è¯•æ–‡ä»¶"""
        test_dir = self.project_root / 'dnf-go-client' / 'test'
        test_files = list(test_dir.rglob('*_test.go'))
        
        results = []
        for test_file in test_files:
            results.append({
                'path': str(test_file.relative_to(self.project_root)),
                'name': test_file.stem,
                'size': test_file.stat().st_size
            })
        
        return sorted(results, key=lambda x: x['path'])
    
    # ========== æ‰¹æ¬¡åˆ›å»ºæ¥å£ ==========
    
    def create_batch(self, batch_name: str, batch_number: int, 
                   description: str, priority: int = 5,
                   file_names: Optional[List[str]] = None) -> int:
        """åˆ›å»ºæ–°æ‰¹æ¬¡"""
        batch = Batch(
            id=None,
            batch_name=batch_name,
            batch_number=batch_number,
            description=description,
            status=MigrationStatus.PENDING.value,
            priority=priority,
            total_files=len(file_names) if file_names else 0,
            migrated_files=0,
            start_date=None,
            planned_end_date=None,
            actual_end_date=None,
            blocker=None,
            notes=None,
            created_at=None,
            updated_at=None
        )
        
        batch_id = self.tracker.create_batch(batch)
        
        if file_names:
            for file_name in file_names:
                file = MigrationFile(
                    id=None,
                    batch_id=batch_id,
                    file_name=file_name,
                    module_name='UNKNOWN',
                    module_id=None,
                    status=MigrationStatus.PENDING.value,
                    priority=priority,
                    proto_file=None,
                    java_file=None,
                    has_test=False,
                    test_passed=False,
                    issues_count=0,
                    migration_notes=None,
                    start_date=None,
                    completion_date=None,
                    created_at=None,
                    updated_at=None
                )
                self.tracker.create_file(file)
        
        return batch_id
    
    # ========== ç»Ÿè®¡å’ŒæŠ¥å‘Šæ¥å£ ==========
    
    def get_migration_summary(self) -> Dict:
        """è·å–è¿ç§»æ‘˜è¦"""
        progress = self.tracker.get_overall_progress()
        modules = self.tracker.get_module_progress()
        
        return {
            'overall_progress': progress,
            'modules': modules,
            'next_batch': self.get_next_batch_to_migrate(),
            'open_issues': len(self.get_open_issues())
        }
    
    def get_batch_summary(self, batch_name: str) -> Dict:
        """è·å–æ‰¹æ¬¡æ‘˜è¦"""
        batch = self.tracker.get_batch_by_name(batch_name)
        if not batch:
            return {}
        
        files = self.tracker.list_files(batch_id=batch.id)
        issues = self.tracker.list_issues(batch_id=batch.id)
        
        return {
            'batch': {
                'name': batch.batch_name,
                'number': batch.batch_number,
                'description': batch.description,
                'status': batch.status,
                'priority': batch.priority,
                'total_files': batch.total_files,
                'migrated_files': batch.migrated_files,
                'progress_percent': round(batch.migrated_files / batch.total_files * 100, 2) 
                                  if batch.total_files > 0 else 0
            },
            'files': [
                {
                    'name': f.file_name,
                    'status': f.status,
                    'has_test': f.has_test,
                    'test_passed': f.test_passed
                }
                for f in files
            ],
            'issues': [
                {
                    'id': i.id,
                    'title': i.title,
                    'severity': i.severity,
                    'status': i.status
                }
                for i in issues
            ]
        }
    
    def export_to_json(self, output_file: str = 'ai_migration_data.json'):
        """å¯¼å‡ºæ‰€æœ‰æ•°æ®åˆ° JSON"""
        batches = self.tracker.list_batches()
        files = self.tracker.list_files()
        issues = self.tracker.list_issues()
        
        data = {
            'batches': [
                {
                    'name': b.batch_name,
                    'number': b.batch_number,
                    'description': b.description,
                    'status': b.status,
                    'priority': b.priority,
                    'total_files': b.total_files,
                    'migrated_files': b.migrated_files
                }
                for b in batches
            ],
            'files': [
                {
                    'name': f.file_name,
                    'module': f.module_name,
                    'batch_id': f.batch_id,
                    'status': f.status,
                    'has_test': f.has_test,
                    'test_passed': f.test_passed
                }
                for f in files
            ],
            'issues': [
                {
                    'id': i.id,
                    'title': i.title,
                    'description': i.description,
                    'severity': i.severity,
                    'status': i.status
                }
                for i in issues
            ]
        }
        
        output_path = self.project_root / 'devdoc' / 'protobuf' / 'reports' / output_file
        with open(output_path, 'w', encoding='utf-8') as f:
            json.dump(data, f, ensure_ascii=False, indent=2)
        
        return str(output_path)


def main():
    """æµ‹è¯• AI åŠ©æ‰‹"""
    assistant = AIMigrationAssistant()
    
    print("=" * 80)
    print("ğŸ¤– AI è¿ç§»æ“ä½œåŠ©æ‰‹æµ‹è¯•")
    print("=" * 80)
    
    # æµ‹è¯•å¿«é€ŸæŸ¥è¯¢
    print("\nğŸ“Š è¿ç§»æ‘˜è¦:")
    summary = assistant.get_migration_summary()
    print(f"  æ€»ä½“è¿›åº¦: {summary['overall_progress']['files']['progress_percent']}%")
    print(f"  ä¸‹ä¸€ä¸ªæ‰¹æ¬¡: {summary['next_batch']}")
    print(f"  å¾…è§£å†³é—®é¢˜: {summary['open_issues']}")
    
    # æµ‹è¯•æ–‡ä»¶æ‰«æ
    print("\nğŸ“ æ–‡ä»¶æ‰«æ:")
    proto_files = assistant.scan_proto_files()
    print(f"  Proto æ–‡ä»¶: {len(proto_files)} ä¸ª")
    
    java_files = assistant.scan_java_files()
    print(f"  Java æ–‡ä»¶: {len(java_files)} ä¸ª")
    
    test_files = assistant.scan_test_files()
    print(f"  æµ‹è¯•æ–‡ä»¶: {len(test_files)} ä¸ª")
    
    # æµ‹è¯•å¯¼å‡º
    print("\nğŸ’¾ å¯¼å‡ºæ•°æ®:")
    output_file = assistant.export_to_json()
    print(f"  å·²å¯¼å‡ºåˆ°: {output_file}")
    
    print("\nâœ… æµ‹è¯•å®Œæˆ")


if __name__ == '__main__':
    main()
